# chunkrs

./: Cargo.toml  README.md  pyproject.toml
src/: cli.rs  lib.rs
